[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Kenney Thick.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -435.5
margin_top = -40.5
margin_right = 435.5
margin_bottom = 40.5
custom_fonts/font = SubResource( 1 )
text = "Rock Paper Scissors"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -132.0
margin_right = 435.0
margin_bottom = -51.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -224.0
margin_right = 14.0
margin_bottom = -204.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
